--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,19 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.14.0</version>
+            <version>4.27.0</version>
         </dependency>
 		<dependency>
    			<groupId>org.testng</groupId>
     		<artifactId>testng</artifactId>
-    		<version>7.7.1</version>
+    		<version>7.10.2</version>
     		<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.12</version> <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
